# bsgalone

./: .gitignore  CMakeLists.txt  Makefile  README.md  codecov.yml  sonar-project.properties
src/: CMakeLists.txt  main.cc
src/bsgalone/: CMakeLists.txt
src/bsgalone/client/: CMakeLists.txt  main.cc
src/bsgalone/core/: CMakeLists.txt
src/bsgalone/server/: CMakeLists.txt  main.cc
src/bsgo/: CMakeLists.txt  Coordinator.cc  Coordinator.hh
src/bsgo/bbox/: AxisAlignedBoundingBox.cc  AxisAlignedBoundingBox.hh  CMakeLists.txt  CircleBox.cc  CircleBox.hh  IBoundingBox.hh
src/bsgo/common/: CMakeLists.txt  JumpUtils.cc  JumpUtils.hh  LockerUtils.cc  PurchaseUtils.cc  PurchaseUtils.hh  StringUtils.cc  StringUtils.hh  VectorUtils.cc  VectorUtils.hh
src/bsgo/communication/: AbstractMessageQueue.hh  CMakeLists.txt  IMessageQueue.hh  MessageConsumerUtils.cc  MessageConsumerUtils.hh  MessageQueue.cc  MessageQueue.hh
src/bsgo/components/: AIComponent.cc  AIComponent.hh  AbstractComponent.cc  AbstractComponent.hh  AiComponent.cc  AiComponent.hh  CMakeLists.txt  ComponentType.cc  ComponentType.hh  Components.cc  Components.hh  ComputerSlotComponent.cc  ComputerSlotComponent.hh  DamageComponent.cc  DamageComponent.hh  DbComponent.cc  DbComponent.hh  DbSyncComponent.cc  DbSyncComponent.hh  EffectComponent.cc  EffectComponent.hh  FactionComponent.cc  FactionComponent.hh  HealthComponent.cc  IComponent.cc  IComponent.hh  KindComponent.cc  KindComponent.hh  LootComponent.cc  LootComponent.hh  NameComponent.cc  NameComponent.hh  NetworkComponent.cc  NetworkComponent.hh  NetworkSyncComponent.cc  NetworkSyncComponent.hh  OwnerComponent.cc  OwnerComponent.hh  PowerComponent.cc  RegenerativeComponent.cc  (+25 more)
src/bsgo/consumers/: AbstractMessageConsumer.cc  AbstractMessageConsumer.hh  CMakeLists.txt  ClientMessageConsumerUtils.cc  ConsumerUtils.cc  ConsumerUtils.hh  DockMessageConsumer.hh  EquipMessageConsumer.cc  EquipMessageConsumer.hh  HangarMessageConsumer.cc  HangarMessageConsumer.hh  JumpCancelledMessageConsumer.cc  JumpCancelledMessageConsumer.hh  JumpMessageConsumer.hh  JumpRequestedMessageConsumer.hh  LoginMessageConsumer.cc  PurchaseMessageConsumer.cc  PurchaseMessageConsumer.hh  SignupMessageConsumer.hh  VelocityMessageConsumer.cc
src/bsgo/controller/: CMakeLists.txt  Coordinator.cc  Coordinator.hh  Systems.cc  Systems.hh
src/bsgo/data/: AsteroidData.cc  AsteroidData.hh  AsteroidDataSource.cc  AsteroidDataSource.hh  CMakeLists.txt  ComputerData.cc  ComputerData.hh  DataLoadingMode.hh  DataSource.cc  DataSource.hh  DatabaseEntityMapper.cc  DatabaseEntityMapper.hh  OutpostData.cc  OutpostData.hh  OutpostDataSource.cc  OutpostDataSource.hh  PlayerComputerData.cc  PlayerComputerData.hh  PlayerData.cc  PlayerData.hh  PlayerDataSource.cc  PlayerDataSource.hh  PlayerResourceData.cc  PlayerResourceData.hh  PlayerShipData.cc  PlayerShipData.hh  PlayerWeaponData.cc  PlayerWeaponData.hh  ResourceData.cc  ResourceData.hh  ShipData.cc  ShipData.hh  ShipDataSource.cc  ShipDataSource.hh  SystemData.cc  SystemData.hh  SystemTickData.cc  SystemTickData.hh  TargetData.cc  TargetData.hh  (+2 more)
src/bsgo/entities/: CMakeLists.txt  Entity.cc  Entity.hh
src/bsgo/enums/: CMakeLists.txt  DockTransition.cc  DockTransition.hh  Faction.cc  GameRole.hh  Item.hh  LoadingTransition.cc  LoadingTransition.hh  ShipClass.cc  Slot.cc  Status.cc  Status.hh  Uuid.cc  Uuid.hh
src/bsgo/loading/: AsteroidDataSource.cc  BehaviorUtils.cc  BehaviorUtils.hh  CMakeLists.txt  OutpostDataSource.cc  OutpostDataSource.hh  ShipDataSource.cc  ShipDataSource.hh
src/bsgo/messages/: AbstractMessage.cc  AbstractMessage.hh  AbstractPlayerMessage.cc  AbstractPlayerMessage.hh  AbstractSystemMessage.cc  AbstractSystemMessage.hh  AiBehaviorSyncMessage.cc  AiBehaviorSyncMessage.hh  AiTargetReachedMessage.cc  AiTargetReachedMessage.hh  CMakeLists.txt  ComponentSyncMessage.cc  ComponentSyncMessage.hh  ComponentUpdatedMessage.cc  ComponentUpdatedMessage.hh  ConnectionMessage.cc  ConnectionMessage.hh  DockMessage.cc  DockMessage.hh  EntityAddedMessage.cc  EntityAddedMessage.hh  EntityDiedMessage.cc  EntityDiedMessage.hh  EntityRemovedMessage.cc  EntityRemovedMessage.hh  EquipMessage.cc  EquipMessage.hh  HangarMessage.cc  HangarMessage.hh  IMessage.cc  IMessage.hh  JoinShipMessage.cc  JoinShipMessage.hh  JumpCancelledMessage.cc  JumpCancelledMessage.hh  JumpMessage.cc  JumpMessage.hh  JumpRequestedMessage.cc  JumpRequestedMessage.hh  LoadingFinishedMessage.cc  (+35 more)
src/bsgo/queues/: AbstractMessageListener.cc  AbstractMessageListener.hh  AbstractMessageQueue.cc  AbstractMessageQueue.hh  AsyncMessageQueue.cc  (+12 more)
src/client/: CMakeLists.txt  main.cc
src/core/: CMakeLists.txt  CoreException.cc  Environment.cc  Environment.hh  Environment.hxx  SerializationUtils.hh  SerializationUtils.hxx  TimeUtils.cc  TimeUtils.hh  TimeUtils.hxx
src/lib/: App.cc  App.hh  CMakeLists.txt
src/messaging/: AbstractAsyncEventQueue.hh  AbstractAsyncEventQueue.hxx  AbstractEvent.hh  AbstractEvent.hxx  AbstractEventProcessor.hh  AbstractEventProcessor.hxx  AbstractSynchronizedEventQueue.hh  AbstractSynchronizedEventQueue.hxx  CMakeLists.txt  EventConcept.hh  EventTypeConcept.hh  IEventListener.hh  IEventQueue.hh
src/net/: CMakeLists.txt  Message.cc  MessageType.cc  MessageType.hh
src/pge/: CMakeLists.txt
src/server/: CMakeLists.txt  main.cc
src/time/: CMakeLists.txt  Duration.cc  Duration.hh  ITimeManager.hh  Tick.cc  Tick.hh  TickData.hh  TickDuration.cc  TickDuration.hh  TimeManager.cc  TimeManager.hh  TimeSerialization.cc  TimeSerialization.hh  TimeStep.cc  TimeStep.hh  Unit.cc  Unit.hh  tz.cpp
src/ui/: BackgroundConfig.cc  BackgroundConfig.hh  CMakeLists.txt  MenuCommon.cc  MenuCommon.hh  MenuConfig.hh  TextConfig.cc  TextConfig.hh  UiBlinkingMenu.cc  UiBlinkingMenu.hh  UiMenu.cc  UiMenu.hh  UiPictureMenu.cc  UiPictureMenu.hh  UiTextField.cc  UiTextField.hh  UiTextMenu.cc  UiTextMenu.hh  UiTimedMenu.cc  UiTimedMenu.hh  UserInputData.hh
tests/helpers/: CMakeLists.txt  Comparison.cc  Comparison.hh
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt
(+3120 files in other folders)
